# NEO-Angele-Risk-Lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bak  Dockerfile.bak.gnn.20260530090146  Dockerfile.bak.java.20260529232134  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.bak.20260529230009  docker-compose.yml.bak.java.20260529232134  pyproject.toml
configs/: app.yaml  datasources.yaml
docs/: analytical_findings.md  api.md  architecture.md  data_dictionary.md  data_expansion.md  data_sources.md  dataset_expansion_full.md  docker_advanced_mode.md  domain_model.md  etl_pipeline.md  frontend_observatory.md  frontend_product_refinement.md  gnn_research_lab.md  leakage_audit.md  ml_baselines.md  model_evidence.md  monte_carlo.md  orbital_simulation.md  risk_priority_score.md  roadmap.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: build_methodology_pdf.sh
tests/: __init__.py  conftest.py  test_api_findings_model_orbital.py  test_api_health.py  test_api_rankings.py  test_api_risk.py  test_api_simulations.py  test_bronze_reader.py  test_bronze_storage.py  test_bulk_ingestion.py  test_cli.py  test_clients.py  test_dataset_expansion_readiness.py  test_discovery.py  test_domain_entities.py  test_domain_factories.py  test_domain_repositories.py  test_etl_cli.py  test_feature_sets.py  test_findings_evidence.py  test_gnn_api.py  test_gnn_baselines.py  test_gnn_datasets.py  test_gnn_experiments.py  (+22 more)
(+252 files in other folders)
