[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-ange-risk-lab"
version = "0.1.0"
description = "Open-source risk intelligence lab for Near-Earth Objects using NASA/JPL data, Spark ETL, feature engineering and baseline machine learning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Neo Angele Risk Lab Contributors" }]
keywords = ["nasa", "jpl", "near-earth-objects", "data-engineering", "risk"]
dependencies = [
    "joblib>=1.4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyarrow>=15.0",
    "pyspark>=3.5",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
neo-ange = "neo_ange.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
